[gd_scene load_steps=8 format=3 uid="uid://d4aswpsq3td0i"]

[ext_resource type="Script" path="res://main.gd" id="1_5k4q0"]
[ext_resource type="PackedScene" uid="uid://drrsfq0x4wt2m" path="res://main_board.tscn" id="1_pwpcp"]
[ext_resource type="PackedScene" uid="uid://mu0jjmh6bt1a" path="res://circle.tscn" id="2_d5bdr"]
[ext_resource type="PackedScene" uid="uid://baxadg8sqpapy" path="res://cross.tscn" id="3_pr6fm"]
[ext_resource type="PackedScene" uid="uid://cdv8lgqjeqjbc" path="res://game_over_menu.tscn" id="5_hfm55"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p1qrr"]
bg_color = Color(0, 0.666667, 0.6, 1)
border_width_left = 5
border_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jm0lc"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5

[node name="Main" type="Node"]
script = ExtResource("1_5k4q0")
circle_scene = ExtResource("2_d5bdr")
cross_scene = ExtResource("3_pr6fm")

[node name="MainBoard" parent="." instance=ExtResource("1_pwpcp")]
position = Vector2(300, 300)

[node name="SidePanel" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 600)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p1qrr")

[node name="CurrentPlayerLabel" type="Label" parent="."]
offset_left = 600.0
offset_top = 120.0
offset_right = 900.0
offset_bottom = 187.0
theme_override_font_sizes/font_size = 46
text = "Next Player:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerPanel" type="Panel" parent="."]
offset_left = 650.0
offset_top = 200.0
offset_right = 850.0
offset_bottom = 400.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jm0lc")

[node name="GameOverMenu" parent="." instance=ExtResource("5_hfm55")]
process_mode = 2

[connection signal="restart" from="GameOverMenu" to="." method="_on_game_over_menu_restart"]
